--- a/src/main/resources/templates/add_edit_lecturer.html
+++ b/src/main/resources/templates/add_edit_lecturer.html
@@ -21,7 +21,7 @@
                     <h2 class="text-center" th:if="${editMode}">Update Lecturer</h2>
                 </div>
                 <div class="card-body">
-                    <form role="form" th:method="${editMode? 'put': 'post'}" th:action="@{/lecturers}" th:object="${lecturer}">
+                    <form role="form" th:method="${editMode? 'put': 'post'}" th:action="@{/lecturers}" th:object="${lecturer}" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label class="form-label"> ID </label>
                             <input  th:readonly="${editMode}"
@@ -80,6 +80,16 @@
                             />
                         </div>
 
+                        <div class="mb-3">
+                            <label class="form-label"> CV </label>
+                            <input
+                                    type="file"
+                                    class="form-control"
+                                    id="cv"
+                                    name="cv"
+                                    accept=".txt, .pdf, .doc, .docx"
+                            />
+                        </div>
 
                         <div class="mb-3 p-3" th:unless="${editMode}">
                             <label class="form-label"> Courses </label>
